# seleksi-sister

./: .gitignore  README.md  script.py  script1.py
.dump/: main.cpp  test.cpp
10.sister.js/: NilaiController.js  README.md  SisterJS.docx  SisterJS.odt  client  client.c  client.js  common.h  controller.c  controller.h  data.c  http.h  main.c  makefile  package.json  parser.c  parser.h  route.c  route.h  server  server.c  server.h  serverbackup.js  util.c  util.h
11. Jancuk/: Jancuk Pristail.docx  README.md  ~$ncuk Pristail.docx  ~WRL1723.tmp
12.benchmark/: README.md  app  benchmark.c  benchmark_times.txt  inversion  inversion.c  inversion.java  inversion.js  randomMatrix.py
13.Fotosop/: CMakeLists.txt  README.md  app  basic.cu  basic.h  gaussian.cu  gaussian.h  main.cu  run.sh  sobel.cu  sobel.h
13.Fotosop/code/: basic.cu  gaussian.cu  sobel.cu
14.I-Am-Dripping/: Im Dripping.docx  README.md  deployment.yml  service.yml  ~$ Dripping.docx
15.pelabuhan/: Pelabuhan.docx  README.md
17.calc/: README.md  app  main.pl  test.cpp
18.TTKI/: TTKI.docx  ~$TTKI.docx  ~WRL1118.tmp
2.4Bit/: test.circ
2.ForBit/: main.circ
2.GNU-Linux/: README.md  ~$U-Linux.docx
3.4bit/: 2nm.pdsprj  2nmReal.pdsprj  2nmReal.pdsprj.DESKTOP-FLQMRFK.DELL.workspace  README.md  ~$m Transister.docx
4.Cisco/: cisco-genshin.pkt
5.Wolfman/: .gitignore  array.h  delete.sh  main.cu  matmul.cpp  matrix.cu  matrix.py  readme.md  run.sh
7.monkeDB/: README.md  docker-compose.yaml
8.Carpal/: CARPAL-Dripping.docx  Carpal Tunnel.docx  client-sister.ovpn  openvpn-install.sh  ~$rpal Tunnel.docx
(+64 files in other folders)
